--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -4,76 +4,48 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="authorization" ResizeMode="NoResize" Height="400" Width="400">
-    <Grid Background="#f1f3f9">
-        
-        <TabControl>
-            <TabItem Header="Вход">
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <StackPanel>
-                        <TextBlock Margin="5" 
-                                   Text="Логин"/>
-                        <TextBox x:Name="tbAutoLog"
-                                 FontFamily="Arial"
-                                 FontSize="15"
-                            Margin="5" 
-                                 MinWidth="100" />
+        Title="авторизация" ResizeMode="NoResize" Height="400" Width="400"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
+    <Grid>
+        <materialDesign:Card Padding="16">
+            <TabControl>
+                <TabItem Header="Вход">
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <StackPanel>
+                            <TextBlock Margin="5" Text="Логин" />
+                            <TextBox x:Name="tbAutoLog" FontSize="15" Margin="5" MinWidth="100" />
+                        </StackPanel>
+                        <StackPanel>
+                            <TextBlock Margin="5" Text="Пароль" />
+                            <PasswordBox x:Name="tbAutoPass" FontSize="15" Margin="5" />
+                        </StackPanel>
+                        <Button x:Name="btAuto" Click="btAuto_Click" Margin="5" Content="Вход" Foreground="{DynamicResource MaterialDesignPaper}" FontFamily="Arial Black" Style="{StaticResource MaterialDesignRaisedButton}" />
                     </StackPanel>
-                    <StackPanel>
-                        <TextBlock Margin="5" 
-                                   FontFamily="Arial" 
-                                   Text="Пароль"/>
-                        <PasswordBox x:Name="tbAutoPass"
-                                     FontFamily="Arial"
-                                     FontSize="15"
-                            Margin="5" />
+                </TabItem>
+                <TabItem Header="Регистрация">
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <StackPanel>
+                            <TextBlock Text="Логин" Margin="5" />
+                            <TextBox x:Name="tbRegLog" Margin="5" FontSize="15" />
+                        </StackPanel>
+                        <StackPanel>
+                            <TextBlock Text="Пароль" Margin="5" />
+                            <PasswordBox x:Name="tbRegPass1" Margin="5" />
+                        </StackPanel>
+                        <StackPanel>
+                            <TextBlock Text="Пароль" Margin="5" />
+                            <PasswordBox x:Name="tbRegPass2" Margin="5" />
+                        </StackPanel>
+                        <Button x:Name="btReg" Click="btReg_Click" Content="Зарегитрироваться" Margin="5" FontFamily="Arial" Foreground="{DynamicResource MaterialDesignPaper}" Style="{StaticResource MaterialDesignRaisedButton}" />
                     </StackPanel>
-                    <Button x:Name="btAuto"
-                            Click="btAuto_Click"
-                        Margin="5" 
-                            Content="Вход" 
-                            Foreground="White" 
-                            FontFamily="Arial Black" />
-                </StackPanel>
-            </TabItem>
-            <TabItem Header="Регистрация">
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <StackPanel>
-                        <TextBlock Text="Логин"
-                                   Margin="5"
-                                   FontFamily="Arial"/>
-                        <TextBox x:Name="tbRegLog" 
-                            Margin="5"
-                                 FontSize="15"
-                                 FontFamily="Arial"/>
-                    </StackPanel>
-                    <StackPanel>
-                        <TextBlock Text="Пароль"
-                                   Margin="5" 
-                                   FontFamily="Arial"/>
-                        <PasswordBox  x:Name="tbRegPass1"
-                            Margin="5" 
-                                 FontFamily="Arial"/>
-                    </StackPanel>
-                    <StackPanel>
-                        <TextBlock Text="Пароль"
-                                   Margin="5" 
-                                   FontFamily="Arial"/>
-                        <PasswordBox x:Name="tbRegPass2"
-                            Margin="5" 
-                                 FontFamily="Arial"/>
-                    </StackPanel>
-                    <Button x:Name="btReg"
-                            Click="btReg_Click"
-                        Content="Зарегитрироваться"
-                            Margin="5" 
-                            FontFamily="Arial"
-                            Foreground="White"/>
-                </StackPanel>
-            </TabItem>
-        </TabControl>
-        
-       
+                </TabItem>
+            </TabControl>
+        </materialDesign:Card>
     </Grid>
 </Window>
